<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".signin.SignInFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:text="@string/sign_in_title"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI30SB" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/sign_in_signature"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phone_number"
        style="@style/Theme.Table.Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_huge"
        android:layout_marginTop="78dp"
        android:hint="@string/sign_in_phone_number_hint"
        android:imeOptions="actionNext"
        android:inputType="phone" />

    <com.example.baseui.widgets.NoChangingBackgroundTextInputLayout
        android:id="@+id/password_container"
        style="@style/Theme.Table.Widget.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_huge"
        android:layout_marginTop="@dimen/margin_normal"
        app:counterEnabled="false"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/Theme.Table.Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/sign_in_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.example.baseui.widgets.NoChangingBackgroundTextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recovery_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/margin_huge"
        android:text="@string/sign_in_recovery_title"
        android:textAppearance="@style/Theme.Ava.TextAppearance.UI14SB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        style="@style/Theme.Table.Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_huge"
        android:layout_marginTop="@dimen/margin_xhuge"
        android:text="@string/sign_in_button_title" />

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_giant"
        tools:text="Not a member?  Register now" />

</LinearLayout>